# unity-plugin-tests

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Scripts/: Action.cs  ActionRuntime.cs
UnityProject/Assets/Scripts/Actions/: ActionTest.cs
UnityProject/Assets/Scripts/UnityNativePluginD3D11Resources/: UnityNativePluginD3D11Resources.cs
UnityProject/Assets/Scripts/UnityNativePluginSequence/: UnityNativePluginSequence.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
UnityProject/UserSettings/: EditorUserSettings.asset
UnityProject/UserSettings/Layouts/: default-2021.dwlt
experiments/: CMakeLists.txt
experiments/GfxPluginTest/: CMakeLists.txt  GfxPluginTest.cpp
experiments/testSDL/: CMakeLists.txt  testSDL.cpp
experiments/unityNativePluginD3D11Resources/: CMakeLists.txt  UnityNativePluginD3D11Resources.cpp
experiments/unityNativePluginRenderAPI/: CMakeLists.txt
experiments/unityNativePluginRenderAPI/src/RenderAPI/: RenderAPI.cpp  RenderAPI_D3D11.cpp
experiments/unityNativePluginRenderAPI/src/include/RenderAPI/: RenderAPI.h  RenderAPI_D3D11.h
experiments/unityNativePluginSequence/: CMakeLists.txt
experiments/unityNativePluginSequence/src/: UnityNativePluginSequence.cpp
unityInterfaces/: CMakeLists.txt
unityPluginRuntime/: CMakeLists.txt
unityPluginRuntime/Action/: CmakeLists.txt
unityPluginRuntime/Action/include/: Action.h
unityPluginRuntime/Actions/: CMakeLists.txt
unityPluginRuntime/Actions/ActionTest/: CMakeLists.txt
unityPluginRuntime/Actions/ActionTest/src/: ActionTest.cpp
unityPluginRuntime/NativeActionRuntime/: CMakeLists.txt
unityPluginRuntime/NativeActionRuntime/include/: RenderAPI.h
unityPluginRuntime/NativeActionRuntime/src/: PluginHandler.cpp  PluginLogger.cpp  unity_plugin.cpp
unityPluginRuntime/NativeActionRuntime/src/RenderAPI/: RenderAPI.cpp  RenderAPI_D3D11.cpp
unityPluginRuntime/NativeActionRuntime/src/include/: PluginHandler.h  PluginRenderEventTypes.h
unityPluginRuntime/NativeActionRuntime/src/include/RenderAPI/: RenderAPI_D3D11.h
unityPluginRuntime/PluginLogger/: CMakeLists.txt
unityPluginRuntime/PluginLogger/include/: PluginLogger.h
